Implements concurrent client management
Introduces a concurrent client management system using dashmap to handle multiple clients simultaneously.

- Adds `dashmap` as a dependency for concurrent data storage.
- Creates a `client_manager` module to encapsulate client management logic.
- Removes the UDP echo test, as it is no longer relevant with the new client management system.
- Renames test functions for clarity.
- Ignores the .claude directory.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ rand = "0.9.1"
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.12"
 tokio = { version = "1.45.1", features = ["full"] }
+dashmap = "6.1.0"
+
+[dependencies]
